--- a/PollSystem/locale/fa/LC_MESSAGES/django.po
+++ b/PollSystem/locale/fa/LC_MESSAGES/django.po
@@ -8,10 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-23 08:13+0000\n"
+"POT-Creation-Date: 2019-03-23 14:02+0000\n"
 "PO-Revision-Date: 2019-03-12 10:24+3:30\n"
 "Last-Translator: Mohammad Katoozi k2527806@gmail.com\n"
-"Language-Team: Persian k2527806@gmail.com\n"
+"Language-Team: Persian\n"
 "Language: Persian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,68 +20,96 @@ msgstr ""
 
 #: Poll/models.py:22
 msgid "question"
-msgstr ""
+msgstr "سوال"
 
 #: Poll/models.py:24
 msgid "date"
-msgstr ""
+msgstr "تاریخ"
 
 #: Poll/models.py:26
 msgid "is published"
-msgstr ""
+msgstr "پخش شده"
 
 #: Poll/models.py:33 Poll/models.py:73 Poll/templates/poll/base.html:8
 msgid "poll"
-msgstr ""
+msgstr "نظر سنجی"
 
 #: Poll/models.py:34
 msgid "polls"
-msgstr ""
+msgstr "نظر سنجی‌ها"
 
 #: Poll/models.py:52
 msgid "value"
-msgstr ""
+msgstr "مقدار"
 
 #: Poll/models.py:53
 msgid "position"
-msgstr ""
+msgstr "موقعیت"
 
 #: Poll/models.py:56
 msgid "answer"
-msgstr ""
+msgstr "جواب"
 
 #: Poll/models.py:57
 msgid "answers"
-msgstr ""
+msgstr "جواب‌ها"
 
 #: Poll/models.py:75
 msgid "voted item"
-msgstr ""
+msgstr "گزینه انتخاب شده"
 
 #: Poll/models.py:76
 msgid "user's IP"
-msgstr ""
+msgstr "ای‌پی کاربر"
 
 #: Poll/models.py:78
 msgid "user"
-msgstr ""
+msgstr "کاربر"
 
 #: Poll/models.py:82
 msgid "vote"
-msgstr ""
+msgstr "رائ"
 
 #: Poll/models.py:83
 msgid "votes"
-msgstr ""
+msgstr "رائ‌ها"
 
 #: Poll/templates/poll/poll.html:18
 msgid "Please, select an answer"
-msgstr ""
+msgstr "لطفا پاسخ را انتخاب کنید"
 
-#: Poll/templates/poll/poll.html:40
+#: Poll/templates/poll/poll.html:40 Public/templates/Public/vote.html:5
 msgid "Vote"
-msgstr ""
+msgstr "رائ"
 
 #: Poll/templates/poll/result.html:16
 msgid "Total votes"
+msgstr "تمام رائ‌ها"
+
+#: Public/templates/Public/admin_view.html:5
+msgid "Admin View"
+msgstr "مدیریت"
+
+#: Public/templates/Public/login.html:5 Public/templates/Public/login.html:46
+msgid "Login"
+msgstr "ورود"
+
+#: Public/templates/Public/login.html:19
+msgid "Shamsipour Technical College"
 msgstr ""
+
+#: Public/templates/Public/login.html:29
+msgid "Username"
+msgstr "نام‌کاربری"
+
+#: Public/templates/Public/login.html:35
+msgid "Password"
+msgstr "گذرواژه"
+
+#: Public/templates/Public/login.html:40
+msgid "Remember me"
+msgstr "مرا بخاطر بسپار"
+
+#: Public/templates/Public/login.html:50
+msgid "Forgot your password?"
+msgstr "کذرواژه را فراموش کرده‌اید؟"
